# realcugan-ncnn-webassembly

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  TODO.md  build.sh  main.cpp  package-lock.json  package.json  playwright.config.cjs  realcugan.cpp  realcugan.h
.github/workflows/: build.yml
docs/: deployment.md  performance-cleanup.md  performance-memory.md  runtime-settings.md  worker-architecture.md
tests/: backend-smoke.cjs  benchmark-runtime-settings.cjs  check-deployment-assets.cjs  measure-peak-memory.cjs
tests/e2e/: app.spec.cjs  run.cjs  server.cjs
web/: .gitignore  app.css  debugLogger.js  i18n.js  index.html  modelManifest.js  wasmFallbackWorker.js
